# serde-gettext

./: Cargo.toml  LICENSE  README.md
.circleci/: config.yml
src/: lib.rs
tests/: json.rs  yaml.rs
