[package]
name = "serde-gettext"
version = "0.1.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gettext-rs = "0.4.3"
serde = "^1"
serde_derive = "^1"
libc-strftime = "0.2"
dynfmt = { version = "0.1", features = ["python"] }
derive-error = "0.0.4"

[dev-dependencies]
serde_json = "^1"
serde_yaml = "0.8"
