[package]
name = "serde-gettext"
version = "0.1.1"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"
license = "MIT"
description = "A deserializable struct to translate and format"
repository = "https://github.com/cecton/serde-gettext"
homepage = "https://github.com/cecton/serde-gettext"
documentation = "https://docs.rs/serde-gettext"
readme = "README.md"
keywords = ["serde", "gettext", "deserialize", "api", "lambda"]
categories = ["internationalization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
circle-ci = { repository = "cecton/serde-gettext" }
is-it-maintained-issue-resolution = { repository = "cecton/serde-gettext" }
is-it-maintained-open-issues = { repository = "cecton/serde-gettext" }

[dependencies]
gettext-rs = "0.4.3"
serde = "^1"
serde_derive = "^1"
libc-strftime = "0.2"
dynfmt = { version = "0.1", features = ["python"] }
derive-error = "0.0.4"

[dev-dependencies]
serde_json = "^1"
serde_yaml = "0.8"
